--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div class="container">
         <div class="stats-grid">
             <div class="stat-card"><div class="stat-number">11</div><div class="stat-label">Modules</div></div>
-            <div class="stat-card"><div class="stat-number">41</div><div class="stat-label">Ressources</div></div>
-            <div class="stat-card"><div class="stat-number">16</div><div class="stat-label">Pages Interactives</div></div>
+            <div class="stat-card"><div class="stat-number">40</div><div class="stat-label">Ressources</div></div>
+            <div class="stat-card"><div class="stat-number">15</div><div class="stat-label">Pages Interactives</div></div>
             <div class="stat-card"><div class="stat-number">9</div><div class="stat-label">Documents</div></div>
             <div class="stat-card"><div class="stat-number">3</div><div class="stat-label">Médias</div></div>
         </div>
@@ -99,9 +99,15 @@
         <div class="tools-section">
             <h2 class="section-title" style="border-color: #8FAFB1; color: #8FAFB1;">Outils et Questionnaires Généraux</h2>
             <div class="tools-grid">
-                <a href="clone-personnalite.html" class="tool-card" target="_blank">
-                    <div class="tool-icon">📄</div>
-                    <div class="tool-name">clone-personnalite</div>
+                <a href="clone-personnalite.html" class="tool-card" style="background: linear-gradient(135deg, #8FAFB1 0%, #6A8B8D 100%); color: white; border: none;">
+                    <div class="tool-icon">🧬</div>
+                    <div class="tool-name" style="color: white; font-size: 1.3em; margin-bottom: 10px;">Clone de Personnalité v6</div>
+                    <div style="font-size: 0.9em; opacity: 0.9; line-height: 1.5;">
+                        Créez votre clone IA professionnel avec interview guidée. Mode API + Prompt + Audio.
+                    </div>
+                    <div style="margin-top: 15px; padding: 8px 16px; background: rgba(255,255,255,0.2); border-radius: 20px; display: inline-block; font-size: 0.85em; font-weight: 600;">
+                        ⚡ Nouveau
+                    </div>
                 </a>
             </div>
         </div>
@@ -109,7 +115,7 @@
     <footer>
         <p>Institut du Couple - Bilan de Compétences du Couple</p>
         <p style="margin-top: 10px;">Marie-Christine Abatte Psychologue</p>
-        <p style="margin-top: 15px;">Généré automatiquement le 25/11/2025 à 23:13</p>
+        <p style="margin-top: 15px;">Généré automatiquement le 23/11/2025 à 18:38</p>
     </footer>
 </body>
 </html>
