--- a/clone-interview-pro.html
+++ b/clone-interview-pro.html
@@ -16774,7 +16774,7 @@ console.log('[Video] 📦 Module 24 helpers loaded');
         // ============================================
         const CONFIG = {
             // ⚠️ À CONFIGURER : Remplacez par votre URL Worker Cloudflare
-            WORKER_URL: 'YOUR_CLOUDFLARE_WORKER_URL_HERE',
+            WORKER_URL: 'https://clone-proxy.11drumboy11.workers.dev',
             MODEL: 'claude-sonnet-4-20250514',
             MAX_TOKENS: 4000,
             AUTOSAVE_INTERVAL: 30000, // 30 secondes
