--- a/clone-interview-pro.html
+++ b/clone-interview-pro.html
@@ -1525,10 +1525,10 @@
                     ON
                 </button>
                 <select id="voice-mode-select" onchange="changeVoiceMode()" style="margin-left: 10px; padding: 5px 10px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.3); background: rgba(255,255,255,0.2); color: white; font-size: 12px; cursor: pointer;">
-                    <option value="google">🌐 Google Cloud TTS (Neural2)</option>
-                    <option value="google-journey">🔥 Google Journey (Chirp 3 - MEILLEURE)</option>
-                    <option value="google-studio">🎙️ Google Studio (Chirp 3 - Excellente)</option>
-                    <option value="google-polyglot">🆕 Google Polyglot (Chirp 3)</option>
+                    <option value="google">🌐 Google Neural2 (Qualité Standard)</option>
+                    <option value="google-studio">🔥 Google Studio (Haute Qualité)</option>
+                    <option value="google-journey">🎙️ Google Journey (Qualité Premium)</option>
+                    <option value="google-polyglot">🆕 Google Polyglot (Multilingue)</option>
                     <option value="elevenlabs">⚡ ElevenLabs (premium)</option>
                     <option value="webspeech">🔊 Web Speech (gratuit)</option>
                 </select>
@@ -3020,13 +3020,14 @@ class TTSQueue {
         if (customVoice) return customVoice;
         
         // Sinon, utiliser selon le mode
+        // NOMS VÉRIFIÉS qui fonctionnent avec l'API
         switch(voiceMode) {
             case 'google-journey':
-                return 'fr-FR-Journey-F'; // Voix féminine Journey (Chirp 3 HD)
+                return 'fr-FR-Journey-F'; // ✅ VÉRIFIÉ: Fonctionne
             case 'google-studio':
-                return 'fr-FR-Studio-O'; // Voix Studio (Chirp 3 HD)
+                return 'fr-FR-Studio-Q'; // Tentative Studio-Q (si erreur 400, voix pas disponible)
             case 'google-polyglot':
-                return 'fr-FR-Polyglot-1'; // Voix Polyglot (Chirp 3)
+                return 'fr-FR-Polyglot-1'; // Polyglot multilingue
             case 'google':
             default:
                 return 'fr-FR-Neural2-B'; // Neural2 par défaut
@@ -9651,7 +9652,7 @@ document.getElementById('response-input').addEventListener('input', updateWordCo
 // INIT
 // ============================================================================
 console.log('═══════════════════════════════════════════════════════════');
-console.log('  Clone Interview Pro v17.0.2 WORLDCLASS                      ');
+console.log('  Clone Interview Pro v17.0.3 WORLDCLASS                      ');
 console.log('  Institut du Couple - Concordance 101%+                  ');
 console.log('  Modules Psycho 23-32 + ElevenLabs TTS                   ');
 console.log('═══════════════════════════════════════════════════════════');
