--- a/clone-interview-pro.html
+++ b/clone-interview-pro.html
@@ -155,7 +155,7 @@
     <!-- ═══════════════════════════════════════════════════════════════════════════
          v18.0 DEV MODE: Google Analytics 4 - Privacy-First Mode
          ═══════════════════════════════════════════════════════════════════════════ -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLACEHOLDER"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VRSF996PHY"></script>
     <script>
         // Google Analytics 4 - Configuration Privacy-First
         window.dataLayer = window.dataLayer || [];
@@ -163,7 +163,7 @@
         gtag('js', new Date());
         
         // Mode anonyme par défaut (RGPD compliant)
-        gtag('config', 'G-PLACEHOLDER', {
+        gtag('config', 'G-VRSF996PHY', {
             'anonymize_ip': true,
             'cookie_flags': 'SameSite=None;Secure',
             'allow_google_signals': false,
@@ -2546,7 +2546,7 @@ const state = {
         // Analytics
         analytics: {
             gaInitialized: false,
-            gaId: 'G-PLACEHOLDER',
+            gaId: 'G-VRSF996PHY',
             eventsLogged: [],
             eventCount: 0
         },
